database connected successfully

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-node_modules
+DATABASE_URL=mongodb+srv://mostakememon321:jYNsPYPl0b8tBRtt@cluster0.66a6iwx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=6500
