user registration successfully

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=mongodb+srv://mostakememon321:jYNsPYPl0b8tBRtt@cluster0.66a6iwx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=6500
+SALT_ROUNDS=10
